--- a/app/views/areas/_areas_form.html.erb
+++ b/app/views/areas/_areas_form.html.erb
@@ -21,7 +21,8 @@
       <div class="col-md-12">
         <div class="btn-group btn-group-justified">
           <%= link_to t('buttons.cancel'), [:areas, back: true], remote: true, class: 'btn btn-default back' %>
-          <%= link_to t('buttons.resume'), 'javascript:;', id: 'areas-form-submit', remote: true, class: 'btn btn-primary', data: { context: @context } %>
+          <%= link_to t('buttons.resume'), 'javascript:;', id: 'areas-form-submit', remote: true, class: 'btn btn-primary',
+            data: { context: @context } %>
         </div>
       </div>
     </div>
