--- a/app/views/starts/show.html.erb
+++ b/app/views/starts/show.html.erb
@@ -89,7 +89,7 @@
             <%= @newest_count %>
           </div>
         </div>
-        <div class="row form-group">
+        <div class="row form-group last-form-group">
           <div class="col-md-4">
             <%= t('.processed') %>
           </div>
