--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -15,6 +15,33 @@
  *= require_tree .
  *= require_self
  */
+ 
+@font-face
+  font-family: 'PT Sans'
+  src: url(asset-path('PTS55F_W.ttf'))
+  font-weight: normal
+  font-style: normal
+
+@font-face
+  font-family: 'PT Sans'
+  src: url(asset-path('PTS56F_W.ttf'))
+  font-weight: normal
+  font-style: italic
+
+@font-face
+  font-family: 'PT Sans'
+  src: url(asset-path('PTS75F_W.ttf'))
+  font-weight: bold
+  font-style: normal
+
+@font-face
+  font-family: 'PT Sans'
+  src: url(asset-path('PTS76F_W.ttf'))
+  font-weight: bold
+  font-style: italic
+  
+body
+  font-family: 'PT Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif
 
 #content
   left: 0
@@ -61,9 +88,21 @@ li
 header
   padding: 10px 0
   height: 120px
+  background-color: #d9edf7
+
+  a
+    color: #337ab7
+    text-decoration: none
+    
+  a:hover, a:focus
+    color: #286090
+    text-decoration: none
 
   .container
-    color: #1c94c4
+    color: #333333
+
+  .text-right
+    font-size: 16px
 
   #logo1
     margin: 10px
@@ -78,6 +117,18 @@ header
   padding: 10px 0
   width: 100%
   height: 50px
+  background-color: #d9edf7
+
+  a
+    color: #337ab7
+    text-decoration: none
+    
+  a:hover, a:focus
+    color: #286090
+    text-decoration: none
+
+  .text-center
+    font-size: 16px
 
 .container
   width: 99%
@@ -145,7 +196,7 @@ header
 
 .btn-map
   color: #fff
-  background-color: #1c94c4
+  background-color: #31708f
 
 .map-panel
   min-width: 80px
@@ -157,7 +208,7 @@ header
 
 .map-panel .panel-heading
   padding: 5px
-  background-color: #1c94c4
+  background-color: #31708f
   a
     color: #fff
     display: block
@@ -179,3 +230,8 @@ header
 
 .hidden-page
   display: none
+ 
+#statistic-panel
+  .last-form-group
+    margin-bottom: 0
+    
