verschiedenste CSS-Anpassungen, Textanpassungen und Korrekturen

--- a/app/assets/javascripts/maps.coffee.erb
+++ b/app/assets/javascripts/maps.coffee.erb
@@ -154,7 +154,7 @@ KS.styles =
           src: KS.imagePath('cluster')
         text: new ol.style.Text
           text: size.toString()
-          font: 'bold 20px Verdana'
+          font: 'bold 20px PT Sans, Helvetica Neue, Helvetica, Arial, sans-serif'
           fill: new ol.style.Fill
             color: '#000000'
     
@@ -165,7 +165,7 @@ KS.styles =
       fill: new ol.style.Fill
         color: 'rgba(255,135,0,0.5)'
       text: new ol.style.Text
-        font: 'bold 11px Verdana'
+        font: 'bold 11px PT Sans, Helvetica Neue, Helvetica, Arial, sans-serif'
         text: feature.get('name') || ''
         stroke: new ol.style.Stroke
           color: '#FFFFFF'
