--- a/app/views/areas/_index.html.erb
+++ b/app/views/areas/_index.html.erb
@@ -7,20 +7,20 @@
   <div class="row form-group">
     <%= label_tag :whole_area, t('.whole_area'), class: 'col-md-6 control-label' %>
     <div class="col-md-6">
-      <%= link_to t('buttons.continue'), [:areas, area_code: -1], role: :button, remote: true, class: 'btn btn-default btn-block' %>
+      <%= link_to t('buttons.continue'), [:areas, area_code: -1], role: :button, remote: true, class: 'btn btn-primary btn-block' %>
     </div>
   </div>
   <div class="row form-group">
     <%= label_tag :districts, t('.districts'), class: 'col-md-6 control-label' %>
     <div class="col-md-6">
       <%= link_to t('buttons.choose'), [:areas, context: 'districts'], role: :button,
-        remote: true, class: 'btn btn-default btn-block' %>
+        remote: true, class: 'btn btn-primary btn-block' %>
     </div>
   </div>
   <div class="row">
     <%= label_tag :own_area, t('.own_area'), class: 'col-md-6 control-label' %>
     <div class="col-md-6">
-      <%= link_to t('buttons.create'), [:areas, context: 'draw'], role: :button, remote: true, class: 'btn btn-default btn-block' %>
+      <%= link_to t('buttons.create'), [:areas, context: 'draw'], role: :button, remote: true, class: 'btn btn-primary btn-block' %>
     </div>
   </div>
 </div>
