--- a/app/views/observations/_show_link.html.erb
+++ b/app/views/observations/_show_link.html.erb
@@ -8,8 +8,8 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-md-4 col-md-offset-4">
-      <%= link_to t('buttons.ok'), '#', id: 'btn-start', class: 'btn btn-primary' %>
+    <div class="col-md-12">
+      <%= link_to t('buttons.ok'), '#', id: 'btn-start', class: 'btn btn-primary btn-block' %>
     </div>
   </div>
 </div>
