verschiedenste CSS-Anpassungen, Textanpassungen und Korrekturen

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -59,6 +59,9 @@ select
 .requests-img-panel
   font-size: 13px
 
+.img-box
+  width: 160px
+
 .img-box img
   position: relative
   top: 0
@@ -180,11 +183,10 @@ header
   width: 99%
 
 .sidebar
-  background-color: #fff
-  border: solid 1px #ddd
-  width: 319px
+  background-color: #d9edf7
+  width: 318px
   top: 11px
-  height: 96%
+  bottom: 21px
   position: absolute
   z-index: 1000
   overflow-y: auto
@@ -198,9 +200,8 @@ header
   padding-bottom: 20px
   padding-left: 5px
   padding-right: 5px
-  background-color: #fff
-  border: solid 1px #ddd
-  left: 320px
+  background-color: #d9edf7
+  left: 318px
   z-index: 1010
   top: 40%
   position: absolute
@@ -215,10 +216,9 @@ header
 
 .address-search-field
   position: absolute
-  background: rgba(0,60,136,0.5)
-  opacity: 0.9
+  background-color: #337ab7
   padding: 1px
-  left: 325px
+  left: 326px
   top: 11px
   width: 200px
   height: 34px
@@ -230,6 +230,9 @@ header
   input
     max-height: 20px
     padding: 0px 10px
+    font-size: 15px
+    border: none
+    border-radius: 0
 
 .view-switcher
   margin-top: 10px
