--- a/app/views/maps/_desktop.html.erb
+++ b/app/views/maps/_desktop.html.erb
@@ -26,7 +26,7 @@
         </div>
       </div>
     </div>
-    <div class="panel panel-default address-search-field">
+    <div class="panel panel-primary address-search-field">
       <div class="panel-body">
         <%= text_field(:places, :search, class: 'form-control', placeholder: t('.address_search')) %>
       </div>
