--- a/app/views/starts/show.html.erb
+++ b/app/views/starts/show.html.erb
@@ -23,9 +23,11 @@
                   <div class="col-md-10">
                     <div class="row">
                       <% if (url = req.media_url).present? -%>
-                        <div class="col-md-12 img-box">
+                        <div class="col-md-12">
+                        <div class="img-box">
                           <img src="<%= url %>" alt="<%= Request.human_attribute_name(:media_url) %>" class="img-rounded img-responsive" height="160" width="160" />
                           <span class="img-overlay">&#35;<%= req.id %><br/><%= req.service %></span>
+                        </div>
                         </div>
                       <% end -%>
                     </div>
@@ -67,6 +69,14 @@
         <h5 class="panel-title"><%= t('.statistics') %></h5>
       </div>
       <div class="panel-body">
+        <div class="row form-group">
+          <div class="col-md-4">
+            <%= t('.overall') %>
+          </div>
+          <div class="col-md-8">
+            <%= @overall_count %>
+          </div>
+        </div>
         <div class="row form-group">
           <div class="col-md-4">
             <%= t('.current') %>
