RSS korrigiert; verschiedenste CSS-Anpassungen, Textanpassungen und Korrekturen

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -181,6 +181,7 @@ header
 
 .container
   width: 99%
+  margin-bottom: 30px
 
 .sidebar
   background-color: #d9edf7
@@ -280,4 +281,6 @@ header
 #statistic-panel
   .last-form-group
     margin-bottom: 0
-    
+
+a.static-link
+  font-weight: bold    
