--- a/app/views/starts/show.html.erb
+++ b/app/views/starts/show.html.erb
@@ -1,4 +1,6 @@
-</br>
+<div class="page-header" id="headline">
+  <h3><%= t('.headline') %></h3>
+</div>
 <div class="row">
   <div class="col-md-4">
     <div class="panel panel-info">
@@ -42,6 +44,9 @@
   </div>
   <div class="col-md-8">
     <div class="panel panel-primary start-panel">
+      <div class="panel-heading">
+        <h5 class="panel-title"><%= t('.what_is_it') %></h5>
+      </div>
       <div class="panel-body">
         <div class="row form-group">
           <div class="col-md-12">
