--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -135,6 +135,7 @@ header
   padding: 10px 0
   height: 125px
   background-color: #d9edf7
+  border-bottom: 1px solid #bce8f1
 
   a
     color: #337ab7
@@ -168,6 +169,7 @@ header
   width: 100%
   height: 60px
   background-color: #d9edf7
+  border-top: 1px solid #bce8f1
 
   a
     color: #337ab7
@@ -196,6 +198,11 @@ header
   z-index: 1000
   overflow-y: auto
   overflow-x: hidden
+  border-top: 1px solid #bce8f1
+  border-right: 1px solid #bce8f1
+  border-bottom: 1px solid #bce8f1
+  border-top-right-radius: 4px
+  border-bottom-right-radius: 4px
 
 .sidebar .tab-content
   padding: 10px
@@ -203,14 +210,19 @@ header
 .sidebar-toggler
   padding-top: 20px
   padding-bottom: 20px
-  padding-left: 5px
+  padding-left: 6px
   padding-right: 5px
   background-color: #d9edf7
-  left: 318px
+  left: 316px
   z-index: 1010
   top: 40%
   position: absolute
   cursor: pointer
+  border-top: 1px solid #bce8f1
+  border-right: 1px solid #bce8f1
+  border-bottom: 1px solid #bce8f1
+  border-top-right-radius: 4px
+  border-bottom-right-radius: 4px
 
 .sidebar-toggler span:before
   font-family: 'Glyphicons Halflings'
