Werbung als statische Seite ergänzt

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -65,6 +65,20 @@ select
   
 .requests-img-panel
   font-size: 13px
+  
+.img-static
+  max-width: 250px
+  
+.ul-static
+  list-style-type: none
+  margin: 0
+  padding: 0
+  overflow: hidden
+  
+.ul-static li
+  float: left
+  margin-right: 20px
+  max-width: 250px
 
 .img-box
   width: 160px
