--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -50,9 +50,6 @@ body
   border-color: #bce8f1
   padding-bottom: 2px
   color: #337ab7
-  
-textarea#abuse_comment
-  margin-top: 10px
 
 select
   cursor: pointer
@@ -87,7 +84,7 @@ select
   position: relative
   top: 0
 
-.img-box .img-overlay
+.img-box .img-overlay-top
   position: absolute
   top: 8px
   padding-left: 5px
@@ -97,7 +94,12 @@ select
   padding-bottom: 2px
   background-color: rgba(255, 255, 255, 0.7)
 
-.img-box:hover .img-overlay, .img-box:focus .img-overlay
+.img-box .img-overlay-bottom
+  position: absolute
+  bottom: 8px
+  margin-left: 134px
+
+.img-box:hover .img-overlay-top, .img-box:focus .img-overlay-top, .img-box:hover .img-overlay-bottom, .img-box:focus .img-overlay-bottom
   display: none
 
 #content
@@ -201,7 +203,18 @@ header
 
 .container
   width: 99%
+
+#main-content
   margin-bottom: 30px
+  
+.div-margin-top
+  margin-top: 10px
+  
+.img-margin-bottom
+  margin-bottom: 4px
+  
+#request_media
+  margin-top: 10px
 
 .sidebar
   background-color: #d9edf7
@@ -273,12 +286,12 @@ header
   right: 0
 
   a
-    width: 110px
+    width: 136px
 
 .map-panel
   min-width: 80px
-  max-width: 350px
-  top: 50px
+  max-width: 300px
+  top: 80px
   position: absolute
   right: 0
   z-index: 1000
