--- a/app/views/observations/_show_link.html.erb
+++ b/app/views/observations/_show_link.html.erb
@@ -4,7 +4,10 @@
       <%= t('.subscribe_feed') %>
     </div>
     <div class="col-md-12">
-      <%= link_to t('.link'), [:observations, observation_key: @rss_id, format: :xml], target: '_blank' %>
+      <%= link_to [:observations, observation_key: @rss_id, format: :xml], target: '_blank', title: t('.link_title') do %>
+            <%= t('.link_text') %>
+            <%= image_tag('rss.png', class: 'img-margin-bottom') %>
+      <% end -%>
     </div>
   </div>
   <div class="row">
