--- a/app/views/starts/show.html.erb
+++ b/app/views/starts/show.html.erb
@@ -2,47 +2,52 @@
   <h3><%= t('.headline') %></h3>
 </div>
 <div class="row">
-  <div class="col-md-4">
+  <div class="col-md-3">
     <div class="panel panel-info">
       <div class="panel-heading">
         <h5 class="panel-title">
           <%= t('.recent_requests') %>
           <%= link_to [:observations, format: :xml], target: '_blank', title: t('.subscribe_requests_feed') do %>
-            <%= image_tag image_path('rss.png') %>
+            <%= image_tag('rss.png', class: 'img-margin-bottom') %>
         </h5>
           <% end -%>
       </div>
       <div class="panel-body requests-img-panel">
-        <% @requests.each do |req| -%>
-          <div class="row form-group">
-            <div class="col-md-12">
-              <%= link_to [:map, request: req.id], title: t('buttons.perma_link', req_id: req.id),
-                data: { turbolinks: false } do %>
-                <div class="row">
-                  <div class="col-md-2">
-                    <%= image_tag req.icon_list %>
-                  </div>
-                  <div class="col-md-10">
-                    <div class="row">
-                      <% if (url = req.media_url).present? -%>
-                        <div class="col-md-12">
-                        <div class="img-box">
-                          <img src="<%= url %>" alt="<%= Request.human_attribute_name(:media_url) %>" class="img-rounded img-responsive" height="160" width="160" />
-                          <span class="img-overlay">&#35;<%= req.id %><br/><%= req.service %></span>
-                        </div>
-                        </div>
-                      <% end -%>
+        <% @requests.each.with_index(1) do |req, i| -%>
+          <% if i.odd? -%>
+            <div class="row form-group">
+              <div class="col-md-6">
+                <%= link_to [:map, request: req.id], title: t('buttons.perma_link', req_id: req.id),
+                  data: { turbolinks: false } do %>
+                  <% if (url = req.media_url).present? -%>
+                    <div class="img-box">
+                      <img src="<%= url %>" alt="<%= Request.human_attribute_name(:media_url) %>" class="img-rounded img-responsive" height="160" width="160" />
+                      <span class="img-overlay-top">&#35;<%= req.id %><br/><%= req.service %></span>
+                      <span class="img-overlay-bottom"><%= image_tag req.icon_list %></span>
                     </div>
-                  </div>
-                </div>
-              <% end -%>
+                  <% end -%>
+                <% end -%>
+              </div>
+          <% else -%>
+              <div class="col-md-6">
+                <%= link_to [:map, request: req.id], title: t('buttons.perma_link', req_id: req.id),
+                  data: { turbolinks: false } do %>
+                  <% if (url = req.media_url).present? -%>
+                    <div class="img-box">
+                      <img src="<%= url %>" alt="<%= Request.human_attribute_name(:media_url) %>" class="img-rounded img-responsive" height="160" width="160" />
+                      <span class="img-overlay-top">&#35;<%= req.id %><br/><%= req.service %></span>
+                      <span class="img-overlay-bottom"><%= image_tag req.icon_list %></span>
+                    </div>
+                  <% end -%>
+                <% end -%>
+              </div>
             </div>
-          </div>
+          <% end -%>
         <% end -%>
       </div>
     </div>
   </div>
-  <div class="col-md-8">
+  <div class="col-md-9">
     <div class="panel panel-primary start-panel">
       <div class="panel-heading">
         <h5 class="panel-title"><%= t('.what_is_it') %></h5>
@@ -50,7 +55,9 @@
       <div class="panel-body">
         <div class="row form-group">
           <div class="col-md-12">
-            <%= t('.start_content') %>
+            <p><%= t('.start_content_one') %></p>
+            <p><%= t('.start_content_two') %></p>
+            <p><%= t('.start_content_three') %></p>
           </div>
         </div>
         <div class="row">
@@ -58,6 +65,14 @@
             <%= link_to t('buttons.requests'), [:map], role: :button, class: 'btn btn-primary', data: { turbolinks: false } %>
           </div>
         </div>
+      </div>
+    </div>
+    <div class="panel panel-primary">
+      <div class="panel-heading">
+        <h5 class="panel-title"><%= t('.what_is_it_not') %></h5>
+      </div>
+      <div class="panel-body">
+        <%= t('.not_content') %>
       </div>
     </div>
     <div id="news-panel" class="panel panel-info">
@@ -79,7 +94,7 @@
             <%= t('.overall') %>
           </div>
           <div class="col-md-8">
-            <%= @overall_count %>
+            <strong><%= @overall_count %></strong>
           </div>
         </div>
         <div class="row form-group">
@@ -87,7 +102,7 @@
             <%= t('.current') %>
           </div>
           <div class="col-md-8">
-            <%= @current_count %>
+            <strong><%= @current_count %></strong>
           </div>
         </div>
         <div class="row form-group">
@@ -95,7 +110,7 @@
             <%= t('.newest') %>
           </div>
           <div class="col-md-8">
-            <%= @newest_count %>
+            <strong><%= @newest_count %></strong>
           </div>
         </div>
         <div class="row form-group last-form-group">
@@ -103,7 +118,7 @@
             <%= t('.processed') %>
           </div>
           <div class="col-md-8">
-            <%= @processed_count %>
+            <strong><%= @processed_count %></strong>
           </div>
         </div>
       </div>
