--- a/app/views/votes/desktop/_new.html.erb
+++ b/app/views/votes/desktop/_new.html.erb
@@ -11,7 +11,7 @@
       </div>
     </div>
     <div class="row form-group">
-      <div class="btn-group btn-group-justified col-md-12" role="group">
+      <div class="btn-group btn-group-justified col-md-12 div-margin-top" role="group">
         <%= link_to(t('buttons.back'), [@request, id_list: @id_list], remote: true, class: 'btn btn-default',
                     role: :button) %>
         <div class="btn-group" role="group">
