CSS der Statistik auf Startseite angepasst

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -321,9 +321,19 @@ header
 .hidden-page
   display: none
  
-#statistic-panel
-  .last-form-group
-    margin-bottom: 0
+.statistic-box
+  width: 90%
+  text-align: center
+ 
+.statistic-box-figure
+  width: 100%
+ 
+  .label
+    font-size: 14px
+ 
+.statistic-box-text
+  width: 100%
+  margin-top: 15px
 
 a.static-link
   font-weight: bold    
