--- a/app/views/abuses/desktop/_new.html.erb
+++ b/app/views/abuses/desktop/_new.html.erb
@@ -16,7 +16,7 @@
     <div class="row form-group">
       <div class="col-md-12">
         <%= label_tag :comment, t('.text'), class: 'control-label' %>
-        <%= f.text_area(:comment, rows: 5, class: 'form-control', placeholder: t('placeholder.abuse')) -%>
+        <%= f.text_area(:comment, rows: 5, class: 'form-control', placeholder: t('placeholder.abuse')) %>
       </div>
     </div>
     <div class="row form-group">
