--- a/app/views/comments/desktop/_new.html.erb
+++ b/app/views/comments/desktop/_new.html.erb
@@ -14,7 +14,7 @@
     <div class="row form-group">
       <div class="col-md-12 div-margin-top">
         <%= label_tag :comment, t('.text'), class: 'control-label' %>
-        <%= f.text_area(:comment, rows: 5, class: 'form-control', placeholder: t('placeholder.comment')) -%>
+        <%= f.text_area(:comment, rows: 5, class: 'form-control', placeholder: t('placeholder.comment')) %>
       </div>
     </div>
     <div class="row form-group">
